--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
+#  .env                contains default values for the environment variables needed by the app
+#  .env.local          uncommitted file with local overrides
+#  .env.$APP_ENV       committed environment-specific defaults
+#  .env.$APP_ENV.local uncommitted environment-specific overrides
 #
 # Real environment variables win over .env files.
 #
@@ -24,8 +24,8 @@ APP_SECRET=af3fb5d5e2ee1f86ced683315d26ce53
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/sfdebut"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
